# mojo-secp256k1

./: .gitignore  .gitmodules  AGENTS.md  README.md  benchmark_recover.mojo  debug_mul.py  debug_output.txt  fuzz_all.mojo  fuzz_ecdsa_recover.mojo  log.md  pixi.toml  test_differential_sign.mojo  test_ecdsa_adversarial.mojo  test_ecdsa_recover.mojo  test_edge_cases.mojo  test_field_limb  test_field_limb.mojo  test_field_ops.mojo  test_secp256k1.mojo  test_secp256k1_kat.mojo  test_sign_dump.mojo  test_wycheproof_verify.mojo
.github/workflows/: ci.yml
decimojo/: .gitattributes  .gitignore  README.md  pixi.toml
decimojo/docs/: changelog.md  examples_on_bigdecimal.mojo  examples_on_bigint.mojo  examples_on_decimal128.mojo  internal_notes.md  readme_zht.md  todo.md
keccak/: .gitignore  README.md  __init__.mojo  main.mojo  pixi.toml
keccak/benchmarks/rust/: Cargo.toml
keccak/benchmarks/rust/src/: lib.rs
python_tests/: benchmark_recover.py  kat_and_benchmark.py  parse_rfc6979.py  recover_and_compare.py  run_all.py  run_differential_test.py  run_wycheproof_tests.py  verify_eth_keys.py  verify_signatures.py
secp256k1/: __init__.mojo  curve.mojo  fe.mojo  field_limb.mojo  fixed_base.mojo  glv.mojo  recover.mojo  rfc6979.mojo  rfc6979_keccak.mojo  sc.mojo  sha256.mojo  sha256_util.mojo  sign.mojo  sign_with_k.mojo  utils.mojo  verify.mojo
tests/: carry_mul.mojo  fuzz_mul.mojo  rfc6979_p256.json  simple_mul.mojo  test_ecdsa_recover.mojo  test_edge_cases.mojo  test_field_limb.mojo  test_recover_dump.mojo  test_rfc6979.mojo  test_seckp256k1_rfc6979.mojo
(+138 files in other folders)
